clusters/home/mtaylor-io/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - mtaylor.io
  - www.mtaylor.io
  http:
  - name: mtaylor-io-routes
    route:
    - destination:
        host: web.mtaylor-io.svc.cluster.local
        port:
          number: 80
