clusters/home/mtaylor-io/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mtaylor-io
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - mtaylor.io
  http:
  - match:
    - uri:
        prefix: "/api/v1/socket"
    route:
    - destination:
        host: event-service.mtaylor-io.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: web.mtaylor-io.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www-mtaylor-io
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - www.mtaylor.io
  http:
  - redirect:
      authority: mtaylor.io
